--- a/style.css
+++ b/style.css
@@ -1,24 +1,35 @@
-body{background-color: red; width: 1180px; margin: 0 auto; font-family: Cambria; padding-top: 50px; padding-bottom: 50px;}
-.main{width: 1180px; height: auto; background-color: rgb(0, 187, 255); padding-top: 10px; padding-bottom: 20px;}
-.whole-div{border: 3px solid black; margin-top: 20px; margin-left: 20px; margin-right: 20px;}
-.header-div{background-color: blueviolet; border: 1px solid black; display: flex;}
+body{background-color: rgb(218, 218, 218); width: 1180px; margin: 0 auto; font-family: Cambria; padding-top: 50px; padding-bottom: 50px;}
+.bondpaper{width: 1180px; height: auto; background-color: white; padding-top: 10px; padding-bottom: 20px;}
+.margin-div{border: 3px solid black; margin-left: 20px; margin-right: 20px;}
+.input-div input {width: 100%; font-size: 14px; box-sizing: border-box;}
+.header-div{margin-left: 20px; margin-right: 20px; display: flex;}
+.logo-div{width: 25%;}
+.logo-div img{height: 100px; width: 100px;}
 .title-div{text-align: center; border: 1px solid #000000;}
 .title-div h3{margin: 0;}
-.top-div{width: 75%; text-align: center; margin-top: 10px; margin-bottom: 10px;}
-.top-div h1{margin: 0;}
-.sss-div{width: 25%; background-color: aliceblue; text-align: left; margin-top: 10px; margin-bottom: 10px;}
-.personal-div{background-color: yellow; border: 1px solid black; }
+.top-div{width: 50%; text-align: center; margin-top: 5px; margin-bottom: 5px;}
+.top-div h1{margin: 0; font-size: 25px;}
+.sss-div{width: 25%; background-color: white; text-align: left; margin-top: 50px; margin-bottom: 10px; border: 3px solid black;}
+.personal-div{border: 1px solid black; }
 .namedob-div{display: flex; border: 1px solid black;}
 .name-div{width: 75%; border-right: 2px solid black;}
 .dob-div{width: 25%;}
 .sexcstin-div{display: flex; border: 1px solid black;}
 .sex-div{width: 17%;}
 .cs-div{width: 58%;}
+.csinput-div{display: flex; width: 100%;}
+.radioinput-div{width: 69%;}
+.textinput-div{width: 29%;}
+.textinput-div input{width: 100%;}
 .tin-div{width: 25%;}
 .natrelpob-div{display: flex; border: 1px solid black;}
 .nationality-div{width: 17%;}
 .religion-div{width: 17%;}
 .pob-div{width: 66%;}
+.pobcheck-div{display: flex;}
+.pobinput-div{width: 61%;}
+.pobinput-div input{width: 100%;}
+.checkinput-div{margin-left: 10px;}
 .addzip-div{display: flex; border: 1px solid black;}
 .address-div{width: 75%;}
 .zip-div{width: 25%;}
